pom.xml fixed